examples/invalid/effect-output-scope.diagnostics
error: rule `bad_scope` uses effect output `claim` outside a matching `after claim ...` block
   --> examples/invalid/effect-output-scope.whip:10:4
   |
10 | => {
   |    ^
   = help: move this use into `after claim succeeds { ... }` or another matching terminal branch
